# spiffy-api

./: README.md  pyproject.toml
examples/: train.ipynb
spiffy/: __init__.py  api.py
