[tool.poetry]
name = "spiffy-api"
version = "0.1.0"
description = ""
authors = ["Spiffy.ai <info@spiffy.ai>"]
readme = "README.md"
packages = [{include = "spiffy"}]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "*"
websockets = "10.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
